# stok

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
docs/dev/: architecture.md
src/: app.rs  cmd.rs  main.rs  util.rs
src/cmd/: ls.rs  run.rs  set.rs  unset.rs
src/util/: env_parser.rs  exec.rs
tests/: integration.rs
