[package]
name = "stok"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vain0x/stok"

[[bin]]
name = "stok"
path = "src/main.rs"

[dependencies]
rpassword = "7.4"

# https://rustprojectprimer.com/building/size.html#binary-size
[profile.release]
# Automatically strip symbols from the binary.
strip = true
opt-level = "z"  # Optimize for size.
# Enable link-time optimization
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
